feat(dashboard): implement dashboard route and usecase for superadmin
